--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/EsteMaeLeo/champions_team_profile_gen/issues"
   },
-  "homepage": "https://github.com/EsteMaeLeo/champions_team_profile_gen#readme"
+  "homepage": "https://github.com/EsteMaeLeo/champions_team_profile_gen#readme",
+  "devDependencies": {
+    "jest": "^27.5.1"
+  }
 }
